# python-teams-logger

./: LICENSE  README.rst  pyproject.toml
.github/workflows/: main.yml
teams_logger/: __init__.py  core.py
tests/: test_teams_logger.py
