[tool.poetry]
name = "teams-logger"
version = "0.3.1"
description = "Microsoft Teams logging handler for Python"
authors = ["Anes Foufa <anes.foufa@upply.com>"]
readme = "README.rst"
homepage = "https://github.com/AnesFoufa/python-teams-logger"
license = "MIT"
classifiers = ["Topic :: System :: Logging", "Topic :: Communications :: Chat"]
[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
